--- a/src/styles/produto.css
+++ b/src/styles/produto.css
@@ -38,7 +38,7 @@
   color: white;
   border: none;
   border-radius: 50px;
-  padding: 8px 15px;
+  padding: 4px 15px;
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
@@ -61,8 +61,11 @@
 }
 
 .acoes-btn:hover {
-  background-color: #3b447b;
-  color: white;
+  background: linear-gradient(
+    180deg,
+    #777777,
+    #bbbbbb
+  ); /* Gradiente mais escuro no hover */
 }
 
 /* ✅ Campo de pesquisa + Filtros */
